--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Fiction'
 - !lcsh 'Short stories'
 - !lcc 'PS'
+- GITenberg
 title: Thomas Jefferson Brown
 url: http://www.gutenberg.org/ebooks/23181
